# game

./: README.md
backend/: package-lock.json  package.json  server.js
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
script/src/: lib.rs  main.rs
web/: index.html
web/css/: style.css
web/js/: game.js  gameState.js  verify.js
