[package]
name = "game_verification_program"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game_verification_program"
path = "src/main.rs"

[[bin]]
name = "game_score_program"
path = "src/bin/game_score_program.rs"

[dependencies]
sp1-zkvm = "4.0.0"
alloy-sol-types = "0.7.7"
game_lib = { path = "../lib" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10.8"
