[package]
name = "game_verification_script"
version = "0.1.0"
edition = "2021"

# Hapus atau komentari baris berikut jika ada
# [[bin]]
# name = "image_gen_script"
# path = "src/main.rs"

[[bin]]
name = "prove"
path = "src/bin/prove.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[[bin]]
name = "game_verify"
path = "src/bin/game_verify.rs"

[dependencies]
sp1-sdk = "4.0.0"
alloy-sol-types = "0.7.7"
game_lib = { path = "../lib" }
clap = { version = "4.4", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
sha2 = "0.10.8"

[build-dependencies]
sp1-build = "4.0.0"
